--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,5 +1,65 @@
 {
-  "WelcomeToChefApp": "مرحبا بك في تطبيق الشيف",
-  "chefApp": "تطبيق الشيف",
-  "pleaseChooseYourLanguage": "اختر لغتك"
+    "welcomeToChefApp": "مرحباً بك في تطبيق الشيف",
+    "chefApp": "تطبيق الشيف",
+    "pleaseChooseYourLanguage": "اختر لغتك",
+    "welcomeBack": "مرحباً بعودتك",
+    "sign_in": "تسجيل الدخول",
+    "sign_up": "إنشاء حساب",
+    "email": "البريد الإكتروني",
+    "name": "الاسم",
+    "phone_number": "رقم الهاتف",
+    "password": "كلمة المرور",
+    "confirmPassword": "تأكيد كلمة المرور",
+    "forgetPassword": "نسيت كلمة السر؟",
+    "sendResetLink": "إرسال الكود",
+    "sendResetLinkInfo": "أدخل بريدك الإلكتروني و سنرسل لك كود لاستعادة كلمة المرور",
+    "createYourNewPassword": "إنشاء كلمة مرور جديدة",
+    "newPassword": "كلمة المرور الجديدة",
+    "oldPassword": "كلمة المرور القديمة",
+    "code": "الرمز",
+    "description": "اكتب وصفاً",
+    "profile": "الملف الشخصي",
+    "confirm": "تأكيد",
+    "editProfile": "تعديل الملف الشخصي",
+    "loginSucessfully": "تم تسجيل الدخول بنجاح",
+    "loginFailed": "حدث خطأ حاول مرة أخري",
+    "please_enter_email": "من فضلك أدخل بريد الكتروني صحيح",
+    "please_enter_valid_password": "من فضلك أدخل كلمة سر صحيحة",
+    "please_enter_phone": "من فضلك أدخل رقم هاتف صحيح",
+    "please_enter_name": "من فضلك أدخل اسم صحيح",
+    "please_enter_address": "من فضلك أدخل عنوان صحيح",
+    "please_enter_social": "من فضلك أدخل رابط تواصل اجتماعي صحيح",
+    "please_enter_desc": "من فضلك أدخل وصف صحيح",
+    "yes": "نعم",
+    "no": "لا",
+    "le": "جنيه",
+    "addDishToMenu": "إضافة طبق للقائمة",
+    "mealName": "اسم الوجبة",
+    "mealDesc": "وصف الوجبة",
+    "mealPrice": "سعر الوجبة",
+    "mealNumber": "بالعدد",
+    "mealQuantity": "بالكمية",
+    "upladPhoto": "اضافة صورة",
+    "addToMenu": "إضافة للقائمة",
+    "mealAddedSucessfully": "تم إضافة الوجبة بنجاح",
+    "mealDeletedSucessfully": "تم حذف الوجبة بنجاح",
+    "mealUpdatedSucessfully": "تم تعديل الوجبة بنجاح",
+    "offline": "متصل",
+    "online": "غير متصل",
+    "settings": "الاعدادات",
+    "logout": "تسجيل الخروج",
+    "logoutSucessfully": "تم تسجيل الخروج بنجاح",
+    "changePassword": "تعديل كلمة السر",
+    "cancel": "إلغاء",
+    "ok": "حسناً",
+    "pleaseEnterValidMealName": "من فضلك أدخل اسم وجبة صحيح",
+    "pleaseEnterValidMealDesc": "من فضلك أدخل وصف وجبة صحيح",
+    "pleaseEnterValidMealPrice": "من فضلك أدخل سعر وجبة صحيح",
+    "pleaseEnterValidMealPhoto": "من فضلك أدخل صورة وجبة ",
+    "checkMail": "راجع البريد الالكتروني",
+    "pleaseEnterValidCode": "من فضلك أدخل كود صحيح",
+    "passwordChangedSucessfully": "تم تغير كلمة السر",
+    "pleaseEnterValidNumber": "من فضلك أدخل رقم صحيح",
+    "camera": "الكامير",
+    "gallery": "المعرض"
 }
