Home Screen Initiated ✔

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -61,5 +61,6 @@
     "passwordChangedSucessfully": "تم تغير كلمة السر",
     "pleaseEnterValidNumber": "من فضلك أدخل رقم صحيح",
     "camera": "الكامير",
-    "gallery": "المعرض"
+    "gallery": "المعرض",
+    "menu": "القائمة",
 }
